--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,7 @@ export(GetRDKit_FP)
 export(GetRDKit_MD)
 export(GetTt_FP)
 export(draw_smiles)
+export(filterColumns)
 export(get_atom_distance)
 export(smartsMatch)
+export(split_data)
