--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,9 @@ export(GetMorgan_FP)
 export(GetRDKit_FP)
 export(GetRDKit_MD)
 export(GetTt_FP)
+export(build_brnn)
+export(build_rf)
+export(build_xgb)
 export(draw_smiles)
 export(filterColumns)
 export(get_atom_distance)
