Update evaluate_model function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(build_brnn)
 export(build_rf)
 export(build_xgb)
 export(draw_smiles)
+export(evaluate_model)
 export(filterColumns)
 export(get_atom_distance)
 export(predictRt)
