Update parallel method.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(draw_smiles)
 export(evaluate_model)
 export(filterColumns)
 export(get_atom_distance)
+export(parallelEnv)
 export(predictRt)
 export(smartsMatch)
 export(split_data)
