Debug .searchCoo function. Update .searchBranch function. Debug .walk_away function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(GetTt_FP)
 export(build_brnn)
 export(build_rf)
 export(build_xgb)
+export(draw_smi)
 export(draw_smiles)
 export(evaluate_model)
 export(filterColumns)
