Add build_glmnet function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(GetRDKit_FP)
 export(GetRDKit_MD)
 export(GetTt_FP)
 export(build_brnn)
+export(build_glmnet)
 export(build_rf)
 export(build_xgb)
 export(draw_smi)
